src/objects/Delivered__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Idea__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <formula>Idea__r.NumComments</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Idea_URL__c</fullName>
        <label>Idea URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>R00N30000002VDQmEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <formula>Idea__r.IdeasInAction__c</formula>
        <label>Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Idea__c</fullName>
        <formula>HYPERLINK(  Idea_URL__c  , IMAGE(&quot;https://na1-blitz04.soma.salesforce.com/servlet/servlet.ImageServer?id=01530000000PcyN&amp;oid=00D30000000K2Ek&amp;lastMod=1212695693000&quot;,&quot;Image Not Available&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Idea</label>
        <type>Text</type>
    </fields>
    <label>Coming Soon</label>
    <listViews>
        <fullName>AllIdeas</fullName>
        <columns>Idea__c</columns>
        <columns>Comments__c</columns>
        <columns>Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Delivered Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coming Soon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>